// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar overview 1 snapshot 1`] = `
<DocumentFragment>
  <img
    class="css-1y16e88"
    height="180"
    src="https://picsum.photos/seed/picsum/128/128"
    width="180"
  />
</DocumentFragment>
`;

exports[`Avatar overview 2 snapshot 1`] = `
<DocumentFragment>
  <img
    class="css-1y16e88"
    height="160"
    src="https://picsum.photos/seed/picsum/128/128"
    width="160"
  />
</DocumentFragment>
`;

exports[`Avatar overview 3 snapshot 1`] = `
<DocumentFragment>
  <img
    class="css-1y16e88"
    height="90"
    src="https://picsum.photos/seed/picsum/128/128"
    width="90"
  />
</DocumentFragment>
`;

exports[`Avatar overview 4 snapshot 1`] = `
<DocumentFragment>
  <img
    class="css-1y16e88"
    height="160"
    src="https://picsum.photos/seed/picsum/128/128"
    width="160"
  />
</DocumentFragment>
`;

exports[`Avatar overview 5 snapshot 1`] = `
<DocumentFragment>
  <img
    class="css-1y16e88"
    height="180"
    src="https://picsum.photos/seed/picsum/128/128"
    width="180"
  />
</DocumentFragment>
`;
